--- a/frontend/src/components/footer.css
+++ b/frontend/src/components/footer.css
@@ -23,7 +23,7 @@ ul li {
   padding: 0 15px;
 }
 .footer-col h4 {
-  font-size: 19px;
+  font-size: 20px;
   color: var(--text);
   text-transform: capitalize;
   margin-bottom: 30px;
@@ -38,7 +38,7 @@ ul li {
   /* text-transform: capitalize; */
   color: var(--text);
   text-decoration: none;
-  font-weight: 300;
+  /* font-weight: 300; */
   display: block;
   transition: all 0.3s ease;
   cursor: pointer;
