--- a/frontend/src/components/eventcard.css
+++ b/frontend/src/components/eventcard.css
@@ -1,22 +1,9 @@
-/* .card-img-top{
-    height: 400px;
-}
-.card-body{
-    height: 200px;
-} */
 .card{
     width: 18rem;
 }
-/* .event-sec{
-    margin: 0;
-    padding: 0;
-} */
 .card-title{
     font-weight: bold;
 }
-/* .toast-container{
-    width: 90vw;
-} */
 .me-auto{
     font-size: 20px;
 }
@@ -41,6 +28,6 @@
         top: 10vh;
         height: 70vh;
         overflow: scroll;
-        
+        align-items: center;
     }
 }
